# Xdata

./: .coverage  .env.template  .gitignore  .pre-commit-config.yaml  404.html  ASYNC_STORAGE_GUIDE.md  CHANGELOG.md  CLAUDE.md  README.md  index.html  main.py  mise.toml  mkdocs.yml  objects.inv  pyproject.toml  readNpy.ipynb  requirements.txt  test_async_storage.py
.github/workflows/: README.md  auto-version-tag.yml  changeset.yml  deploy-documentation.yml  docs.yml  fetch-categories.yml  pr-check.yml  pre-pr.yml  python-publish.yml  python-publish.yml.disabled  release.yml
advanced/concurrency_retry_analysis/: index.html
advanced/refactoring_time_utils/: index.html
advanced/timezone_best_practices/: index.html
api/market_service/: index.html
api/models/: index.html
binance_vision_data_format/: index.html
changelog/: index.html
configuration/: index.html
contributing/: index.html
demo/: README.md  define_universe.py  download_data.py  export_data.py  readNpy.ipynb  read_db.py  read_npy.ipynb
demo_data/database/: market.db
development_guide/: index.html
docs/: index.md  logging_guide.md  universe.md
docs/api/: models.md
docs/development/: refactoring_summary.md
docs/examples/: basic.md
docs/guides/: engineering_plan.md
examples/basic/: index.html
examples/data_processing/: index.html
export/: index.html
iterators/: index.html
logging_guide/: index.html
project_optimization_plan/: index.html
quickstart/: index.html
refactoring_time_utils/: index.html
scripts/: fetch_daily_categories.py  prepare_release.py
search/: search_index.json
tests/: __init__.py  logging_usage_examples.py  quick_test.py  test_basic.py  test_cli_logging.py  test_data_shape.py  test_db.py  test_export_shape.py  test_exported_data.py  test_lookahead_bias.py  test_market_data.py  test_services.py  test_storage.py  test_universe.py  test_websocket.py  test_workflow_benchmark.py
timezone_best_practices/: index.html
universe/: index.html
universe_schema_guide/: index.html
websocket/: index.html
(+147 files in other folders)
