[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crypto_data"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A cryptocurrency trading info bot"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-binance",
    "pyyaml",
    # 添加其他依赖
]

[tool.hatch.build.targets.wheel]
packages = ["src/crypto-data"] 